--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>{% block title %}Bienvenue !{% endblock %}</title>
         {% block stylesheets %}
+            <link href="{{ asset('css/style.css') }}"
 	        {{ encore_entry_link_tags('app') }}
         {% endblock %}
     </head>
@@ -58,7 +59,8 @@
         {% block body %}{% endblock %}
 
         {% block javascripts %}
-        	{{ encore_entry_script_tags('app') }}
+            <script src="{{ asset('js/app.js') }}"></script>
+            <{{ encore_entry_script_tags('app') }}
         {% endblock %}
     </body>
 </html>
