--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>{% block title %}Bienvenue !{% endblock %}</title>
         {% block stylesheets %}
-            <link href="{{ asset('css/style.css') }}"
+            <link rel="stylesheet" href="../public/build/app.css">
 	        {{ encore_entry_link_tags('app') }}
         {% endblock %}
     </head>
