--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,98 @@
-.active {
-    background-color: red;
+.bg-gray {
+    background: #EEEEEE;
 }
+
+footer {
+    border-top: 1px solid #E1E1E1;
+}
+
+.pagination > li > a:focus,
+.pagination > li > a:hover,
+.pagination > li > span:focus,
+.pagination > li > span:hover {
+    color: #5a5a5a;
+    background-color: #eee;
+    border-color: #ddd;
+}
+
+.pagination > .active > a {
+    color: white;
+    background-color: #202020 !Important;
+    border: solid 1px #202020 !Important;
+}
+
+.topBtn {
+    position: fixed;
+    visibility: hidden;
+    transition: background-color 0.8s, 
+    opacity .8s, visibility 0.8s;
+    opacity: 0;
+    background-color: #202020;
+    text-align: center;
+    padding-top: 1rem;
+    width: 60px;
+    height: 60px;
+    bottom: 110px;
+    right: 30px;
+    border-radius: 3px;
+    z-index: 10;
+}
+
+.topBtn:hover {
+    cursor: pointer;
+    background-color: gray;
+}
+
+.hide {
+    visibility: visible;
+    opacity: 1;
+}
+
+/* Lien vers le code du loader : https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_loader5 */
+#loader {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    z-index: 1;
+    width: 120px;
+    height: 120px;
+    margin: -76px 0 0 -76px;
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid #202020;
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
+  }
+  
+  @-webkit-keyframes spin {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+  
+  /* Add animation to "page content" */
+  .animate-bottom {
+    position: relative;
+    -webkit-animation-name: animatebottom;
+    -webkit-animation-duration: 1s;
+    animation-name: animatebottom;
+    animation-duration: 1s
+  }
+  
+  @-webkit-keyframes animatebottom {
+    from { bottom:-100px; opacity:0 } 
+    to { bottom:0px; opacity:1 }
+  }
+  
+  @keyframes animatebottom { 
+    from{ bottom:-100px; opacity:0 } 
+    to{ bottom:0; opacity:1 }
+  }
+  
+  #myDiv {
+    display: none;
+  }
