--- a/templates/article/_form.html.twig
+++ b/templates/article/_form.html.twig
@@ -1,4 +1,17 @@
-{{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
-{{ form_end(form) }}
+<div class="container">    
+    {{ form_start(form) }}
+    <div class="form-group">
+        <label>Titre :</label><br>
+        {{ form_widget(form.title) }}
+    </div>
+    <div class="form-group">
+        <label>Catégorie :</label><br>
+        {{ form_widget(form.category) }}
+    </div>
+    <div class="form-group">
+        <label>Contenu :</label><br>
+        {{ form_widget(form.content) }}
+    </div>
+    <button class="btn btn-success">{{ button_label|default('Sauvegarder') }}</button>
+    {{ form_end(form) }}
+</div>
