--- a/templates/category/_delete_form.html.twig
+++ b/templates/category/_delete_form.html.twig
@@ -1,5 +1,7 @@
-<form method="post" action="{{ path('category_delete', {'id': category.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('category_delete', {'id': category.id}) }}" onsubmit="return confirm('Etes-vous sur de vouloir supprimer ?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ category.id) }}">
-    <button class="btn">Delete</button>
+    <div class="col-lg-12 text-center">
+        <button class="btn btn-secondary btn-sm">Supprimer <i class="fas fa-times"></i></button>
+    </div> 
 </form>
