all website front-end

--- a/templates/category/new.html.twig
+++ b/templates/category/new.html.twig
@@ -1,11 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Category{% endblock %}
+{% block title %}Nouvelle catégorie{% endblock %}
 
 {% block body %}
-    <h1>Create new Category</h1>
+<div style="width: 50%; margin-left: 25%">
+    <h1 class="text-center">Nouvelle catégorie</h1>
 
     {{ include('category/_form.html.twig') }}
-
-    <a href="{{ path('category_index') }}">back to list</a>
+</div>
+<div class="col-lg-12 text-center">
+    <a class="btn btn-primary" href="{{ path('category_index') }}">Retour vers les catégories <i class="fas fa-undo-alt"></i></a>
+</div>
 {% endblock %}
