--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,6 +6,10 @@ footer {
     border-top: 1px solid #E1E1E1;
 }
 
+.pagi {
+  margin-bottom: 7rem;
+}
+
 .pagination > li > a:focus,
 .pagination > li > a:hover,
 .pagination > li > span:focus,
