--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -31,7 +31,7 @@
 
     {# Pagination #}
 
-    <nav class="d-flex justify-content-center mt-5">                                     {# pagination centrée #}
+    <nav class="d-flex justify-content-center pagi mt-5">                                     {# pagination centrée #}
         <ul class="pagination">
             <li class="page-item {% if actual_page == 1 %}disabled{% endif %}">     {# précédent disabled si on est déjà sur la première page #}
               <a class="page-link" href="{{ path('article_index', {'page': actual_page - 1}) }}" aria-label="Précédent">
