--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Article index{% endblock %}
+{% block title %}Page d'accueil des articles{% endblock %}
 
 {% block body %}
     <div class="container">
