--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -55,9 +55,35 @@
                             </li>
                             {% endif %}
                         </ul>
+                        <ul class="navbar-nav ml-auto">
+                            {% if app.user %}
+                                <li class="nav-item">
+                                    <a href="{{ path('app_logout') }}" class="nav-link">Déconnexion</a>
+                                </li>
+                            {% else %}
+                                <li class="nav-item">
+                                    <a href="{{ path('app_register') }}" class="nav-link">Inscription</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="{{ path('app_login') }}" class="nav-link">Connexion</a>
+                                </li>
+                            {% endif %}
+                        </ul>
                     </div>
                 </div>
             </nav>
+
+            {# affichage des messages #}
+            {% for label, messages in app.flashes %}
+                <div class="container">
+                    <div class="alert alert-{{ label }}">
+                        {% for message in messages %}
+                            <p>{{ message | raw }}</p>
+                        {% endfor %}
+                    </div>
+                </div>
+            {% endfor %}
+
             {% block body %}{% endblock %}
             <a class="topBtn"><img src="{{ asset('img/arrow.png') }}"></a>
             <footer class="fixed-bottom mt-5 bg-gray text-center text-lg-start">
